# d2l-pytorch-docker

./: .gitignore  README.md  conda-to-poetry.sh  d2l-poetry.Dockerfile  d2l-uv.Dockerfile  d2l.Dockerfile  docker-proxy.txt  environment.yml  mathmodeling-gpu-wjw.Dockerfile  mathmodeling-gpu.Dockerfile  mathmodeling.Dockerfile  pyproject.toml
chapter12_computational-performance/: hybridize.ipynb
chapter14_natural-language-processing-pretraining/: bert-dataset.ipynb
chapter1_introduction/: index.ipynb
chapter2_preliminaries/: autograd.ipynb
chapter3_linear-networks/: image-classification-dataset.ipynb  linear-regression-scratch.ipynb  linear-regression.ipynb  softmax-regression-concise.ipynb
d2l-docker/: d2l-uv.Dockerfile  d2l.Dockerfile  pyproject.toml
pytorch/: index.ipynb
pytorch/chapter11_optimization/: optimization-intro.ipynb
pytorch/chapter13_computer-vision/: image-augmentation.ipynb
pytorch/chapter3_linear-networks/: image-classification-dataset.ipynb  linear-regression-concise.ipynb  softmax-regression-scratch.ipynb
pytorch/chapter4_multilayer-perceptrons/: kaggle-house-price.ipynb
test/: 逻辑回归-信用卡检测任务.ipynb
