[project]
name = "d2l-pytorch"
version = "0.1.0"
description = ""
authors = [
    {name = "seydlitz2185",email = "njg.sty@gmail.com"}
]
readme = "README.md"
requires-python = "3.9.16"
dependencies = [
    "d2l (==1.0.3)",
    "torch (==2.6.0)",
    "torchvision (==0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
